--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-image": "^2.9.0",
     "gatsby-plugin-google-analytics": "^2.9.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-manifest": "^2.10.0",
     "gatsby-plugin-material-ui": "^2.1.10",
     "gatsby-plugin-mdx": "^1.8.0",
     "gatsby-plugin-netlify-cms": "^4.8.0",
@@ -45,6 +46,7 @@
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-helmet": "^6.1.0",
     "@types/styled-components": "^5.1.7",
     "typescript": "^4.1.3"
   }
