feat: add Homepage first version

--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-transformer-remark": "^2.14.0",
     "gatsby-transformer-sharp": "^2.10.0",
+    "gsap": "^3.6.0",
     "netlify-cms-app": "^2.14.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-gsap": "^2.2.1",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.2.1"
   },
