--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@material-ui/icons": "^4.11.2",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@types/mdx-js__react": "^1.5.3",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.9.0",
@@ -33,10 +34,12 @@
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.12.0",
     "gatsby-plugin-styled-components": "^3.8.0",
+    "gatsby-remark-images": "^3.9.0",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-transformer-remark": "^2.14.0",
     "gatsby-transformer-sharp": "^2.10.0",
     "gsap": "^3.6.0",
+    "intersection-observer": "^0.12.0",
     "netlify-cms-app": "^2.14.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
