--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^16.13.1",
     "react-gsap": "^2.2.1",
     "react-helmet": "^6.1.0",
+    "react-responsive-carousel": "^3.2.11",
     "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.1"
   },
